# qai

./: .env  .gitignore  .zenodo.json  CITATION.cff  Dockerfile  README.md  build.zig  citation.bib  cloudflare.env  docker-compose.yml  flake.nix  package-lock.json  package.json  pingora.conf  renovate.json
.github/workflows/: fh.yml
.zig-cache/tmp/: 859939747025ba48-.intentionally-empty-file.o.d  c98267f7539b62e1-.intentionally-empty-file.o.d
ahoy/: TODO.md  build.sbt  docker-compose.yml
ahoy/src/main/resources/: application.conf
ahoy/src/main/scala/ai/qompass/ahoy/: Main.scala
ahoy/src/main/scala/ai/routes/: UserRoutes.scala
ahoy/src/main/scala/ai/services/: UserService.scala
certs/: cloudflare-origin.crt  cloudflare-origin.key
cloudflared/: Dockerfile
galley/: Cargo.toml
galley/cas_client/: Cargo.toml
galley/chunk_cache/: Cargo.toml
galley/deduplication/: Cargo.toml
galley/merkledb/: Cargo.toml
galley/merklehash/: Cargo.toml
galley/utils/: Cargo.toml
land/: Cargo.toml  Containerfile  Dockerfile  Dockerfile.land  Leptos.toml  Trunk.toml  _document.js  build.sh  next.config.js  next.config.mjs  package-lock.json  package.json  rust-toolchain.toml  tailwind.config.cjs  tailwind.config.ts  wf.sh
land/next/: React.lazy
land/src/: layout.rs  lib.rs  main.rs
land/src/app/: layout.rs  layout.tsx  page.rs  page.tsx
land/src/app/api/: signup.rs
land/src/app/legal/: page.rs
land/src/app/models/test-model/: page.rs
land/src/archive/: page.rs
land/src/components/ui/: button.rs  card.rs  mod.rs  rose_download.rs  rosedownload.module.css  textarea.rs
land/src/lib/: utils.rs
land/src/lib/crypto/: post_quantum.rs
land/src/styles/: main.css  rosedownload.css
land/style/: main.css
nginx/: Dockerfile  newpingora.key  nginx.conf  pingora.crt  pingora.key
nginx/certs/: newpingora.crt
qompass.ai/: package.json
